Criado através do Colaboratory

--- a/Aula04_Exercicios_ipynb_txt.ipynb
+++ b/Aula04_Exercicios_ipynb_txt.ipynb
@@ -84,28 +84,23 @@
       "metadata": {
         "id": "sUrmuOzbO5Cd",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 197
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f91ad54e-544d-4a09-d74a-7a907549cb42"
+        "outputId": "33b5344a-2313-4ffa-d988-9673ca440657"
       },
       "source": [
-        "write('Nome: Thiago Leão'\n",
-        "      'Endereço: Rua ABC'\n",
-        "      'Endereço: Rua ABC')"
+        "print('Nome: Thiago Leao\\nEndereço: Rua ABC\\nCEP:00000-000')"
       ],
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-171db00e8676>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m write('Nome: Thiago Leão'\n\u001b[0m\u001b[1;32m      2\u001b[0m       \u001b[0;34m'Endereço: Rua ABC'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m       'Endereço: Rua ABC')\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'write' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Nome: Thiago Leao\n",
+            "Endereço: Rua ABC\n",
+            "CEP:00000-000\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -126,18 +121,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8f07024e-766c-4594-b9f2-67c1a8415526"
+        "outputId": "6b51d2f3-f1c0-4ebf-bf1f-e840b6a5e1da"
       },
       "source": [
-        "nome = 'Thiago Leao'\n",
-        "print('Olá [nome]!')"
+        "print('Digite o seu nome:')\n",
+        "nome = input()\n",
+        "print('Olá, ' + nome + '! Seja bem vindo ao fantástico mundo da programação')"
       ],
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Olá [nome]!\n"
+            "Digite o seu nome:\n",
+            "Thiago\n",
+            "Olá, Thiago! Seja bem vindo ao fantástico mundo da programação\n"
           ],
           "name": "stdout"
         }
@@ -207,7 +205,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OXISQASdTeSW"
+        "id": "OXISQASdTeSW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ba860b27-834d-4410-f987-62b99111d12c"
       },
       "source": [
         "n1 = 3\n",
@@ -215,8 +217,16 @@
         "if n1>=n2:\n",
         "  print('True')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -248,13 +258,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZIj-PGVZVVP6"
+        "id": "ZIj-PGVZVVP6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "028f3736-6482-4641-9d6b-d796de5f519b"
       },
       "source": [
-        ""
+        "nome = 'bruno fabri'\n",
+        "nome = nome.upper()\n",
+        "endereco = 'Rua ABC'\n",
+        "endereco = endereco.lower()\n",
+        "hobby = 'jogar cs'\n",
+        "hobby = hobby.title()\n",
+        "print('Nome: ' + nome)\n",
+        "print('Endereço: ' + endereco)\n",
+        "print('Hobby: ' + hobby)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Nome: BRUNO FABRI\n",
+            "Endereço: rua abc\n",
+            "Hobby: Jogar Cs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
