Criado através do Colaboratory

--- a/Aula04_Exercicios_ipynb_txt.ipynb
+++ b/Aula04_Exercicios_ipynb_txt.ipynb
@@ -166,20 +166,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "88ed6b3c-526d-44c4-dcac-494d63e490be"
+        "outputId": "22277a12-5222-4aa8-c1e4-01460c6708fa"
       },
       "source": [
-        "n1 = 2\n",
-        "n2 = 3\n",
+        "n1 = int(input('Digite o primeiro valor: '))\n",
+        "n2 = int(input('Digite o segundo valor: '))\n",
         "soma = n1+n2\n",
-        "print(soma)"
+        "print('Soma: ', soma)"
       ],
-      "execution_count": 13,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "5\n"
+            "Digite o primeiro valor: 2\n",
+            "Digite o segundo valor: 3\n",
+            "Soma:  5\n"
           ],
           "name": "stdout"
         }
@@ -191,7 +193,7 @@
         "id": "4HQxR3FTTbSr"
       },
       "source": [
-        "## Exercício 05\n",
+        "3## Exercício 05\n",
         "Elabore um programa que recebe dois valores inteiros e mostra se o primeiro valor é maior ou igual ao segundo valor\n",
         "\n",
         "**Exemplo:**\n",
@@ -209,19 +211,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba860b27-834d-4410-f987-62b99111d12c"
+        "outputId": "72e02a4e-3d2c-403e-f0c5-e2bf49501724"
       },
       "source": [
-        "n1 = 3\n",
-        "n2 = 2\n",
-        "if n1>=n2:\n",
-        "  print('True')"
+        "n1 = int(input('Primeiro valor = '))\n",
+        "n2 = int(input('Segundo valor = '))\n",
+        "print(n1>=n2)"
       ],
-      "execution_count": 14,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Primeiro valor = 3\n",
+            "Segundo valor = 2\n",
             "True\n"
           ],
           "name": "stdout"
@@ -258,31 +261,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZIj-PGVZVVP6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "028f3736-6482-4641-9d6b-d796de5f519b"
+        "id": "ziw9ZmgL-qey",
+        "outputId": "f0c989c2-0581-48d8-d424-0dc8f9b2a3ec"
       },
       "source": [
-        "nome = 'bruno fabri'\n",
-        "nome = nome.upper()\n",
-        "endereco = 'Rua ABC'\n",
-        "endereco = endereco.lower()\n",
-        "hobby = 'jogar cs'\n",
-        "hobby = hobby.title()\n",
-        "print('Nome: ' + nome)\n",
-        "print('Endereço: ' + endereco)\n",
-        "print('Hobby: ' + hobby)"
+        "nome = input('Qual o seu nome: ').upper()\n",
+        "endereco = input('Qual o seu endereço: ').lower()\n",
+        "hobby = input('Qual o seu hobby: ').title()\n",
+        "print('Nome: {}\\nEndereço: {}\\nHobby: {}'.format(nome,endereco,hobby))"
       ],
-      "execution_count": 24,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Nome: BRUNO FABRI\n",
+            "Qual o seu nome: thiago leao\n",
+            "Qual o seu endereço: rua abc\n",
+            "Qual o seu hobby: socializar\n",
+            "Nome: THIAGO LEAO\n",
             "Endereço: rua abc\n",
-            "Hobby: Jogar Cs\n"
+            "Hobby: Socializar\n"
           ],
           "name": "stdout"
         }
@@ -329,13 +330,69 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mRQ9fpIgMp5Z"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2yOWmXJZJ8-U",
+        "outputId": "1804d3cc-668a-43e2-9d62-4a95b46ec8b5"
       },
       "source": [
-        ""
+        "valor_dolar = 5.75\n",
+        "valor_real = float(input('Valor em R$ = R$'))\n",
+        "valor_real = valor_real/valor_dolar\n",
+        "print('Valor em $ = $', valor_real)"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Valor em R$ = R$1000\n",
+            "Valor em $ = $ 173.91304347826087\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t91F7w0nRjCR"
+      },
+      "source": [
+        "valor_dolar = 5.75\n",
+        "valor_real = float(input('Valor em R$ = R$'))\n",
+        "valor_real = valor_real/valor_dolar\n",
+        "print('Valor em $ = $', valor_real)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mRQ9fpIgMp5Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "04adf873-92f6-46f9-947a-80398d266c8e"
+      },
+      "source": [
+        "valor_dolar = float(input('Valor em $ = $'))\n",
+        "valor_final = valor_dolar*5.75\n",
+        "print('Valor em R$ = R$', valor_final)"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Valor em $ = $1000\n",
+            "Valor em R$ = R$ 5750.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -371,13 +428,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0eHzSCyaGkYJ"
+        "id": "0eHzSCyaGkYJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "36cd4510-9a1f-4120-954a-3d1c1a1721cb"
       },
       "source": [
-        ""
+        "valor_aluguel = float(input('Valor do aluguel = R$'))\n",
+        "valor_final = (valor_aluguel*0.31)+valor_aluguel\n",
+        "print('Valor do aluguel reajustado = R$', valor_final)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Valor do aluguel = R$1000\n",
+            "Valor do aluguel reajustado = R$ 1310.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SKZGDal2Ar_t",
+        "outputId": "bd928ee9-0389-40d2-f733-14bbad7a4915"
+      },
+      "source": [
+        "reajuste = float(input('Percentual do reajuste = '))\n",
+        "reajuste = reajuste/100\n",
+        "valor_aluguel = float(input('Valor do aluguel = R$'))\n",
+        "valor_final = (valor_aluguel*reajuste)+valor_aluguel\n",
+        "print('Valor do aluguel reajustado = R$', valor_final)"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Percentual do reajuste = 31\n",
+            "Valor do aluguel = R$1000\n",
+            "Valor do aluguel reajustado = R$ 1310.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -407,7 +508,62 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mrpz9UomQH2P"
+        "id": "Mrpz9UomQH2P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c8f40699-d643-48ed-a210-5e926941def0"
+      },
+      "source": [
+        "vida_monstro = int(input('Vida de um monstro (entre 10 e 50): '))\n",
+        "ataque = int(input('Valor do ataque do jogador por turno (entre 5 e 10): '))\n",
+        "turno = round(vida_monstro/ataque)\n",
+        "print(f'O jogador irá precisar de {turno} turnos para derrotar o monstro')"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Vida de um monstro (entre 10 e 50): 34\n",
+            "Valor do ataque do jogador por turno (entre 5 e 10): 5\n",
+            "O jogador irá precisar de 7 turnos para derrotar o monstro\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UxigvzGbM4-3",
+        "outputId": "07791b29-382c-4608-ddaf-19f202b2cf5f"
+      },
+      "source": [
+        "from random import randint\n",
+        "vida_monstro = randint(10,50)\n",
+        "ataque = randint(5,10)\n",
+        "turno = round(vida_monstro/ataque)\n",
+        "print(f'O jogador irá precisar de {turno} turnos para derrotar o monstro')"
+      ],
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "O jogador irá precisar de 5 turnos para derrotar o monstro\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MjCx9IH0Q5M_"
       },
       "source": [
         ""
