Criado através do Colaboratory

--- a/Aula04_Exercicios_ipynb_txt.ipynb
+++ b/Aula04_Exercicios_ipynb_txt.ipynb
@@ -457,17 +457,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "SKZGDal2Ar_t",
-        "outputId": "bd928ee9-0389-40d2-f733-14bbad7a4915"
+        "id": "AQQITw-aSuxG",
+        "outputId": "aad20f3b-1758-4b37-ce53-08a642b0d86a"
       },
       "source": [
-        "reajuste = float(input('Percentual do reajuste = '))\n",
-        "reajuste = reajuste/100\n",
+        "reajuste = float(input('Percentual do reajuste = '))/100\n",
         "valor_aluguel = float(input('Valor do aluguel = R$'))\n",
         "valor_final = (valor_aluguel*reajuste)+valor_aluguel\n",
         "print('Valor do aluguel reajustado = R$', valor_final)"
       ],
-      "execution_count": 72,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "stream",
