Criado através do Colaboratory

--- a/Aula04_Exercicios_ipynb_txt.ipynb
+++ b/Aula04_Exercicios_ipynb_txt.ipynb
@@ -516,7 +516,7 @@
       "source": [
         "vida_monstro = int(input('Vida de um monstro (entre 10 e 50): '))\n",
         "ataque = int(input('Valor do ataque do jogador por turno (entre 5 e 10): '))\n",
-        "turno = round(vida_monstro/ataque)\n",
+        "turno = round(vida_monstro/ataque + 0.5)\n",
         "print(f'O jogador irá precisar de {turno} turnos para derrotar o monstro')"
       ],
       "execution_count": 86,
@@ -539,21 +539,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UxigvzGbM4-3",
-        "outputId": "07791b29-382c-4608-ddaf-19f202b2cf5f"
+        "outputId": "5f79ca11-e0c2-4557-f00b-54766d368f26"
       },
       "source": [
         "from random import randint\n",
         "vida_monstro = randint(10,50)\n",
         "ataque = randint(5,10)\n",
-        "turno = round(vida_monstro/ataque)\n",
+        "turno = round(vida_monstro/ataque + 0.5)\n",
         "print(f'O jogador irá precisar de {turno} turnos para derrotar o monstro')"
       ],
-      "execution_count": 90,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "O jogador irá precisar de 5 turnos para derrotar o monstro\n"
+            "O jogador irá precisar de 4 turnos para derrotar o monstro\n"
           ],
           "name": "stdout"
         }
