--- a/Exercicios_desafios_condicionais_aula5.ipynb
+++ b/Exercicios_desafios_condicionais_aula5.ipynb
@@ -62,7 +62,7 @@
         "  menor = n3\n",
         "print(f'Menor numero: {menor} ')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "  maior = n2\n",
         "print(f'Maior numero: {maior} ')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "else:\n",
         "  print('Negativo')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g-9Tll_kJphc"
+        "id": "g-9Tll_kJphc",
+        "outputId": "4016c963-cde1-4336-fcae-5ece122aaf66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "letra = input('Digite a letra: ')\n",
@@ -174,12 +178,20 @@
         "  print('Feminino') \n",
         "if letra == 'M':\n",
         "  print('Masculino')\n",
-        "else:\n",
-        "  print('Sexo Inválio')\n",
-        "quit()"
+        "elif letra != 'F' and 'M':\n",
+        "  print('Sexo Inválio')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite a letra: S\n",
+            "Sexo Inválio\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -198,13 +210,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "caUKaqZYJp-K"
+        "id": "caUKaqZYJp-K",
+        "outputId": "775c8da8-9f87-47a5-d27f-b971fd0855cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "nota = float(input('Digite a nota de 1 a 10: '))\n",
+        "if nota >= 0 and nota <= 10:\n",
+        "  if nota < 6:\n",
+        "    print('F')\n",
+        "  if nota >= 6 and nota < 7:\n",
+        "    print('D')\n",
+        "  if nota >= 7 and nota < 8:\n",
+        "    print('C')\n",
+        "  if nota >= 8 and nota < 9:\n",
+        "    print('B')\n",
+        "  if nota >= 9 and nota <= 10:\n",
+        "    print('A')\n",
+        "else:\n",
+        "  print('Nota invalida')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Digite a nota de 1 a 10: 10\n",
+            "A\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -218,13 +256,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mh6l9n1_JqUa"
+        "id": "mh6l9n1_JqUa",
+        "outputId": "34afa188-c5e4-4096-90f5-6a15bbff44ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "letra = input('Qual a letra?: ')\n",
+        "letra = letra.lower()\n",
+        "if letra in ('a', 'e', 'i', 'o', 'u','b', 'c', 'd', 'f', 'g', 'h', 'j', 'k', 'l', 'm', 'n', 'p', 'q', 'r', 's', 't', 'v', 'w', 'x', 'y', 'z'):\n",
+        "  if letra in ('a', 'e', 'i', 'o', 'u'):\n",
+        "    print('Vogal')\n",
+        "  if letra in ('b', 'c', 'd', 'f', 'g', 'h', 'j', 'k', 'l', 'm', 'n', 'p', 'q', 'r', 's', 't', 'v', 'w', 'x', 'y', 'z'):\n",
+        "    print('Consoante')\n",
+        "else:\n",
+        "  print('Não e uma letra')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Qual a letra?: 2\n",
+            "Não e uma letra\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
