Criado através do Colaboratory

--- a/Aula_5_Desafios.ipynb
+++ b/Aula_5_Desafios.ipynb
@@ -170,10 +170,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4016c963-cde1-4336-fcae-5ece122aaf66"
+        "outputId": "9bb3bbcf-3ac9-4f2b-b937-677830b6d22a"
       },
       "source": [
-        "letra = input('Digite a letra: ')\n",
+        "letra = input('Digite a letra: ').upper()\n",
         "if letra == 'F':\n",
         "  print('Feminino') \n",
         "if letra == 'M':\n",
@@ -181,13 +181,13 @@
         "elif letra != 'F' and 'M':\n",
         "  print('Sexo Inválio')"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Digite a letra: S\n",
-            "Sexo Inválio\n"
+            "Digite a letra: m\n",
+            "Masculino\n"
           ],
           "name": "stdout"
         }
@@ -260,26 +260,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34afa188-c5e4-4096-90f5-6a15bbff44ab"
+        "outputId": "ea307215-aa90-4cb0-d4f5-fd0464f307d4"
       },
       "source": [
-        "letra = input('Qual a letra?: ')\n",
-        "letra = letra.lower()\n",
-        "if letra in ('a', 'e', 'i', 'o', 'u','b', 'c', 'd', 'f', 'g', 'h', 'j', 'k', 'l', 'm', 'n', 'p', 'q', 'r', 's', 't', 'v', 'w', 'x', 'y', 'z'):\n",
-        "  if letra in ('a', 'e', 'i', 'o', 'u'):\n",
+        "letra = input('Qual a letra?: ').lower()\n",
+        "if letra in ('aeioubcdfghjklmnpqrstvwxyz'):\n",
+        "  if letra in ('aeiou'):\n",
         "    print('Vogal')\n",
-        "  if letra in ('b', 'c', 'd', 'f', 'g', 'h', 'j', 'k', 'l', 'm', 'n', 'p', 'q', 'r', 's', 't', 'v', 'w', 'x', 'y', 'z'):\n",
+        "  if letra in ('bcdfghjklmnpqrstvwxyz'):\n",
         "    print('Consoante')\n",
         "else:\n",
         "  print('Não e uma letra')"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Qual a letra?: 2\n",
-            "Não e uma letra\n"
+            "Qual a letra?: A\n",
+            "Vogal\n"
           ],
           "name": "stdout"
         }
@@ -306,11 +305,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "79946239-4459-41b4-ba20-830e7849625b"
+        "outputId": "771f1481-2c82-47f1-a297-86d1be278cef"
       },
       "source": [
-        "tipoarma = input('Tipo de arma - medieval ou futurista? ')\n",
-        "tipoarma = tipoarma.lower()\n",
+        "tipoarma = input('Qual era - medieval ou futurista? ').lower()\n",
         "if tipoarma in ('medieval','futurista'):\n",
         "  if tipoarma == 'medieval':\n",
         "   print('Espada')\n",
@@ -319,13 +317,13 @@
         "else:\n",
         "  print('Tente novamente')"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Tipo de arma - medieval ou futurista? sadas\n",
-            "Tente novamente\n"
+            "Qual era - medieval ou futurista? medieval\n",
+            "Espada\n"
           ],
           "name": "stdout"
         }
@@ -460,107 +458,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ddf1343c-7f19-476d-e35a-ceab2fb84407"
+        "outputId": "82a11f2e-bf7f-455f-8bf4-d0c02400318e"
       },
       "source": [
-        "nota1 = 0\n",
-        "nota5 = 0\n",
-        "nota10 = 0\n",
-        "nota50 = 0\n",
-        "nota100 = 0\n",
-        "resto5 = 0\n",
-        "resto10 = 0\n",
-        "resto50 = 0\n",
-        "resto100 = 0\n",
-        "\n",
-        "valor_saque = int(input('Qual o valor de saque - R$10 a R$600'))\n",
+        "valor_saque = int(input('Qual o valor de saque - R$10 a R$600: R$'))\n",
         "if valor_saque >=10 and valor_saque <= 600:\n",
-        "  if valor_saque >= 10 and valor_saque < 50:\n",
-        "    nota10 = int(valor_saque / 10)\n",
-        "    resto10 = valor_saque % 10\n",
-        "    if resto10 >= 5 and resto10 < 10:\n",
-        "      nota5 = int(resto10 / 5)\n",
-        "      resto5 = resto10 % 5\n",
-        "    if resto5 < 5:\n",
-        "      nota1 = int(resto5 / 1)\n",
-        "\n",
-        "  if valor_saque >= 50 and valor_saque < 100:\n",
-        "    nota50 = int(valor_saque / 50)\n",
-        "    resto50 = valor_saque % 50 \n",
-        "    if resto50 >= 10 and resto50 < 50:\n",
-        "      nota10 = int(resto50 / 10)\n",
-        "      resto10 = resto50 % 10\n",
-        "    if resto10 >= 5 and resto10 < 10:\n",
-        "      nota5 = int(resto10 / 5)\n",
-        "      resto5 = resto10 % 5\n",
-        "    if resto5 < 5:\n",
-        "      nota1 = int(resto5 / 1)\n",
-        "\n",
-        "  if valor_saque >= 100:\n",
-        "    nota100 = int(valor_saque / 100)\n",
-        "    resto100 = valor_saque % 100\n",
-        "    if resto100 >= 50 and resto100 < 100:\n",
-        "      nota50 = int(resto100 / 50)\n",
-        "      resto50 = resto100 % 50\n",
-        "    if resto100 >=10 and resto100 < 50:\n",
-        "      nota10 = int(resto100 / 10)\n",
-        "      resto10 = resto100 / 10\n",
-        "    if resto100 >=5 and resto100 < 10:\n",
-        "      nota5 = int(resto100 / 5)\n",
-        "      resto5 = resto100 / 5   \n",
-        "    if resto100 < 5:\n",
-        "      nota1 = int(resto100 / 1)\n",
-        "\n",
-        "    if resto100 < 50 and resto100 >= 10:\n",
-        "      nota10 = nota10 + int(resto100 / 10)\n",
-        "      resto10 = resto100 % 10   \n",
-        "    if resto10 < 10 and resto50 >= 5:\n",
-        "      nota5 = nota5 + int(resto10 / 5)\n",
-        "      resto5 = resto5 % 5\n",
-        "    if resto5 < 5:\n",
-        "      nota1 = nota1 + int(resto5 / 1)\n",
-        "  print(f'Notas de 1: {nota1}')\n",
-        "  print(f'Notas de 5: {nota5}')\n",
-        "  print(f'Notas de 10: {nota10}')\n",
-        "  print(f'Notas de 50: {nota50}')\n",
-        "  print(f'Notas de 100: {nota100}')   \n",
+        "  notas100 = valor_saque // 100\n",
+        "  notas50 = valor_saque % 100 // 50\n",
+        "  notas10 = valor_saque % 50 // 10\n",
+        "  notas5 = valor_saque % 10 // 5\n",
+        "  notas1 = valor_saque % 10 // 1\n",
+        "  print(f'Para sacar a quantia R${valor_saque}, o programa fornecera {notas100} notas de R$100, {notas50} notas de R$50, {notas10} notas de R$10, {notas5} notas de R$5, {notas1} notas de R$1.')   \n",
         "else:\n",
         "   print('Valor invalido')\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Qual o valor de saque - R$10 a R$600567\n",
-            "Notas de 1: 0\n",
-            "Notas de 5: 0\n",
-            "Notas de 10: 0\n",
-            "Notas de 50: 1\n",
-            "Notas de 100: 5\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "67toVufCAp33",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "dcf44ec3-321d-4356-cc49-ca94bfaf1b46"
-      },
-      "source": [
-        "print(resto5)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "0\n"
+            "Qual o valor de saque - R$10 a R$600: R$589\n",
+            "Para sacar a quantia R$589, o programa fornecera 5 notas de R$100, 1 notas de R$50, 3 notas de R$10, 1 notas de R$5, 9 notas de R$1.\n"
           ],
           "name": "stdout"
         }
