Criado através do Colaboratory

--- a/Aula_5_Desafios.ipynb
+++ b/Aula_5_Desafios.ipynb
@@ -43,7 +43,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3286509b-72cf-4baa-8d01-92c9edc19dac"
+        "outputId": "59df9d02-8b3a-4b27-9b4c-e8b56c8ab382"
       },
       "source": [
         "n1 = int(input('Numero 1: '))\n",
@@ -62,15 +62,15 @@
         "  menor = n3\n",
         "print(f'Menor numero: {menor} ')"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Numero 1: 20\n",
+            "Numero 1: 5\n",
             "Numero 2: 1\n",
-            "Numero 3: 50\n",
-            "Maior numero: 50 \n",
+            "Numero 3: 8\n",
+            "Maior numero: 8 \n",
             "Menor numero: 1 \n"
           ],
           "name": "stdout"
@@ -170,24 +170,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9bb3bbcf-3ac9-4f2b-b937-677830b6d22a"
+        "outputId": "81e68646-2c32-4c03-ecc4-1f8461266f50"
       },
       "source": [
         "letra = input('Digite a letra: ').upper()\n",
         "if letra == 'F':\n",
         "  print('Feminino') \n",
-        "if letra == 'M':\n",
+        "elif letra == 'M':\n",
         "  print('Masculino')\n",
         "elif letra != 'F' and 'M':\n",
         "  print('Sexo Inválio')"
       ],
-      "execution_count": 19,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Digite a letra: m\n",
-            "Masculino\n"
+            "Digite a letra: S\n",
+            "Sexo Inválio\n"
           ],
           "name": "stdout"
         }
@@ -214,31 +214,31 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "775c8da8-9f87-47a5-d27f-b971fd0855cb"
+        "outputId": "b08e1739-1051-4e86-d5d9-cc8039662c43"
       },
       "source": [
         "nota = float(input('Digite a nota de 1 a 10: '))\n",
         "if nota >= 0 and nota <= 10:\n",
         "  if nota < 6:\n",
         "    print('F')\n",
-        "  if nota >= 6 and nota < 7:\n",
+        "  elif nota >= 6 and nota < 7:\n",
         "    print('D')\n",
-        "  if nota >= 7 and nota < 8:\n",
+        "  elif nota >= 7 and nota < 8:\n",
         "    print('C')\n",
-        "  if nota >= 8 and nota < 9:\n",
+        "  elif nota >= 8 and nota < 9:\n",
         "    print('B')\n",
-        "  if nota >= 9 and nota <= 10:\n",
+        "  elif nota >= 9 and nota <= 10:\n",
         "    print('A')\n",
         "else:\n",
         "  print('Nota invalida')"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Digite a nota de 1 a 10: 10\n",
-            "A\n"
+            "Digite a nota de 1 a 10: 7\n",
+            "C\n"
           ],
           "name": "stdout"
         }
@@ -260,25 +260,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ea307215-aa90-4cb0-d4f5-fd0464f307d4"
+        "outputId": "e5bff58e-5c80-4fc2-b677-a2e33304e5f0"
       },
       "source": [
         "letra = input('Qual a letra?: ').lower()\n",
         "if letra in ('aeioubcdfghjklmnpqrstvwxyz'):\n",
         "  if letra in ('aeiou'):\n",
         "    print('Vogal')\n",
-        "  if letra in ('bcdfghjklmnpqrstvwxyz'):\n",
+        "  elif letra in ('bcdfghjklmnpqrstvwxyz'):\n",
         "    print('Consoante')\n",
         "else:\n",
         "  print('Não e uma letra')"
       ],
-      "execution_count": 18,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Qual a letra?: A\n",
-            "Vogal\n"
+            "Qual a letra?: d\n",
+            "Consoante\n"
           ],
           "name": "stdout"
         }
@@ -305,25 +305,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "771f1481-2c82-47f1-a297-86d1be278cef"
+        "outputId": "86155f96-d6c2-4851-f8a8-ed42240a3486"
       },
       "source": [
         "tipoarma = input('Qual era - medieval ou futurista? ').lower()\n",
         "if tipoarma in ('medieval','futurista'):\n",
         "  if tipoarma == 'medieval':\n",
         "   print('Espada')\n",
-        "  if tipoarma == 'futurista':\n",
+        "  elif tipoarma == 'futurista':\n",
         "    print('Sabre de luz')\n",
         "else:\n",
         "  print('Tente novamente')"
       ],
-      "execution_count": 13,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Qual era - medieval ou futurista? medieval\n",
-            "Espada\n"
+            "Qual era - medieval ou futurista? futurista\n",
+            "Sabre de luz\n"
           ],
           "name": "stdout"
         }
@@ -357,7 +357,7 @@
         "if ataque in ('espada','sabre'):\n",
         "  if ataque == 'espada':\n",
         "   print('Você ainda não matou o chefão.')\n",
-        "  if ataque == 'sabre':\n",
+        "  elif ataque == 'sabre':\n",
         "    print('Você derrotou o chefão com o sabre de luz')\n",
         "else:\n",
         "  print('Ataque novamente')"
@@ -402,38 +402,38 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "999779da-2d4f-4b29-d819-3c0fe830b36c"
+        "outputId": "22ca3f3d-b665-4058-f02d-a12eb9a090c4"
       },
       "source": [
-        "salario = float(input('Digite o salario: '))\n",
+        "salario = float(input('Digite o salario: ').replace(',' , '.'))\n",
         "if salario <= 280:\n",
         "  reajuste = 0.2\n",
-        "if salario > 280 and salario <= 700:\n",
+        "elif salario > 280 and salario <= 700:\n",
         "  reajuste = 0.15\n",
-        "if salario > 700 and salario <= 1500:\n",
+        "elif salario > 700 and salario <= 1500:\n",
         "  reajuste = 0.10\n",
-        "if salario > 1500:\n",
+        "elif salario > 1500:\n",
         "  reajuste = 0.05\n",
         "\n",
         "novo_salario = (salario * reajuste) + salario\n",
         "aumento = novo_salario - salario\n",
         "reajuste_percentual = reajuste*100\n",
-        "print(f'\\nSalario antes do reajuste: R${salario}')\n",
+        "print(f'\\nSalario antes do reajuste: R${salario:.2f}')\n",
         "print(f'Reajuste: {reajuste_percentual}%')\n",
-        "print(f'Valor do aumento: R${aumento}')\n",
-        "print(f'Novo salario: R${novo_salario}')"
+        "print(f'Valor do aumento: R${aumento:.2f}')\n",
+        "print(f'Novo salario: R${novo_salario:.2f}')"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Digite o salario: 280\n",
+            "Digite o salario: 899\n",
             "\n",
-            "Salario antes do reajuste: R$280.0\n",
-            "Reajuste: 20.0%\n",
-            "Valor do aumento: R$56.0\n",
-            "Novo salario: R$336.0\n"
+            "Salario antes do reajuste: R$899.00\n",
+            "Reajuste: 10.0%\n",
+            "Valor do aumento: R$89.90\n",
+            "Novo salario: R$988.90\n"
           ],
           "name": "stdout"
         }
