Criado através do Colaboratory

--- a/Aula_5_Desafios.ipynb
+++ b/Aula_5_Desafios.ipynb
@@ -458,7 +458,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "82a11f2e-bf7f-455f-8bf4-d0c02400318e"
+        "outputId": "1375ea03-26ff-4b09-8dc1-661732679b7b"
       },
       "source": [
         "valor_saque = int(input('Qual o valor de saque - R$10 a R$600: R$'))\n",
@@ -467,18 +467,31 @@
         "  notas50 = valor_saque % 100 // 50\n",
         "  notas10 = valor_saque % 50 // 10\n",
         "  notas5 = valor_saque % 10 // 5\n",
-        "  notas1 = valor_saque % 10 // 1\n",
-        "  print(f'Para sacar a quantia R${valor_saque}, o programa fornecera {notas100} notas de R$100, {notas50} notas de R$50, {notas10} notas de R$10, {notas5} notas de R$5, {notas1} notas de R$1.')   \n",
+        "  notas1 = valor_saque % 5 // 1\n",
+        "  if notas100 > 0:\n",
+        "    print(f'{notas100} notas de R$100,00')\n",
+        "  if notas50 > 0:\n",
+        "    print(f'{notas50} notas de R$50,00')\n",
+        "  if notas10 > 0:\n",
+        "    print(f'{notas10} notas de R$10,00')    \n",
+        "  if notas5 > 0:\n",
+        "    print(f'{notas5} notas de R$5,00')\n",
+        "  if notas1 > 0:\n",
+        "    print(f'{notas1} notas de R$1,00')\n",
         "else:\n",
         "   print('Valor invalido')\n"
       ],
-      "execution_count": 8,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Qual o valor de saque - R$10 a R$600: R$589\n",
-            "Para sacar a quantia R$589, o programa fornecera 5 notas de R$100, 1 notas de R$50, 3 notas de R$10, 1 notas de R$5, 9 notas de R$1.\n"
+            "Qual o valor de saque - R$10 a R$600: R$399\n",
+            "3 notas de R$100,00\n",
+            "1 notas de R$50,00\n",
+            "4 notas de R$10,00\n",
+            "1 notas de R$5,00\n",
+            "4 notas de R$1,00\n"
           ],
           "name": "stdout"
         }
@@ -487,7 +500,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z4Te8JcE5M2-"
+        "id": "mScfU_xLnAnI"
       },
       "source": [
         ""
