Criado através do Colaboratory

--- a/Aula_5_Desafios.ipynb
+++ b/Aula_5_Desafios.ipynb
@@ -458,7 +458,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1375ea03-26ff-4b09-8dc1-661732679b7b"
+        "outputId": "87b3576d-79ce-4984-a261-e7e8e5e81a58"
       },
       "source": [
         "valor_saque = int(input('Qual o valor de saque - R$10 a R$600: R$'))\n",
@@ -467,7 +467,7 @@
         "  notas50 = valor_saque % 100 // 50\n",
         "  notas10 = valor_saque % 50 // 10\n",
         "  notas5 = valor_saque % 10 // 5\n",
-        "  notas1 = valor_saque % 5 // 1\n",
+        "  notas1 = valor_saque % 5\n",
         "  if notas100 > 0:\n",
         "    print(f'{notas100} notas de R$100,00')\n",
         "  if notas50 > 0:\n",
@@ -481,7 +481,7 @@
         "else:\n",
         "   print('Valor invalido')\n"
       ],
-      "execution_count": 41,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
